@@ -28,7 +28,15 @@ class Roda
     # default status set to 500, before executing the error handler.
     # The error handler can change the response status if necessary,
     # as well set headers and/or write to the body, just like a regular
-    # request.
+    # request.  After the error handler returns a response, normal after
+    # processing of that response occurs, except that an exception during
+    # after processing is logged to <tt>env['rack.errors']</tt> but
+    # otherwise ignored. This avoids recursive calls into the
+    # error_handler.  Note that if the error_handler itself raises
+    # an exception, the exception will be raised without normal after
+    # processing.  This can cause some after processing to run twice
+    # (once before the error_handler is called and once after) if
+    # later after processing raises an exception.
     #
     # By default, this plugin handles StandardError and ScriptError.
     # To override the exception classes it will handle, pass a :classes
@@ -36,6 +44,10 @@ class Roda
     #
     #   plugin :error_handler, classes: [StandardError, ScriptError, NoMemoryError]
     module ErrorHandler
+      def self.load_dependencies(app, *)
+        app.plugin :_after_hook
+      end
+
       DEFAULT_ERROR_HANDLER_CLASSES = [StandardError, ScriptError].freeze
 
       # If a block is given, automatically call the +error+ method on
@@ -66,7 +78,16 @@ class Roda
         rescue *opts[:error_handler_classes] => e
           @_response.send(:initialize)
           @_response.status = 500
-          super{handle_error(e)}
+          res = _call{handle_error(e)}
+          begin
+            _roda_after(res)
+          rescue => e2
+            if errors = env['rack.errors']
+              errors.puts "Error in after hook processing of error handler: #{e2.class}: #{e2.message}"
+              e2.backtrace.each{|line| errors.puts(line)}
+            end
+          end
+          res
         end
 
         private
